# python-bizdays

./: .buildinfo  .gitignore  ANBIMA.cal  ANBIMA.txt  B3.cal  CHANGELOG.md  LICENSE.txt  MANIFEST  README.md  SITE.ipynb  SITE.md  Test.cal  api.html  bizdays.py  calendars.html  calendars.ipynb  genindex.html  getdate.html  getdate.ipynb  index.html  objects.inv  pandas.html  pandas.ipynb  params.json  py-modindex.html  pyproject.toml  quick.html  quick.ipynb  search.html  searchindex.js  setup.cfg  setup.py  test_bizdays.py  test_bizdays_pandas.py  test_calendar.py  test_dateindex.py
.github/workflows/: pytest.yml  sphinx.yml
_sources/: quick.ipynb.txt
_static/: alabaster.css
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
