[tool.poetry]
name = "bizdays"
version = "1.0.14"
description = "Functions to handle business days calculations"
authors = ["wilsonfreitas <wilson.freitas@gmail.com>"]
readme = "README.md"
include = ["ANBIMA.cal", "B3.cal", "Actual.cal"]

[tool.poetry.dependencies]
python = ">=3.9"
pandas-market-calendars = ">=4.3.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
pycodestyle = ">=2.11.1"
ipykernel = ">=6.26.0"

[tool.poetry.group.docs.dependencies]
Sphinx = ">=5.1.1"
nbsphinx = ">=0.8.9"
matplotlib = ">=3.5.3"
numpy = ">=1.26.0"
lxml = ">=4.9.1"
pandas = ">=2.0.0"
alabaster = ">=0.7.12"
ipywidgets = ">=8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
