
[metadata]
name = bizdays
version = 1.0.1
author = Wilson Freitas
author_email = wilsonfreitas@gmail.com
description = Functions to handle business days calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wilsonfreitas/python-bizdays
project_urls =
    Bug Tracker = https://github.com/wilsonfreitas/python-bizdays/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = bizdays
python_requires = >=3
